@@ -1,5 +1,7 @@
 #!/bin/sh
 
+set -e
+
 cp -av /usr/share/gettext/gettext.h src/
 autopoint --force
 aclocal -I m4
@@ -7,3 +9,4 @@ autoheader
 libtoolize --automake --copy
 automake --add-missing --copy --foreign --include-deps
 autoconf
+./configure
